Therion 5.5.7 (in progress):


--------------------------------------------------------------------------------

Therion 5.5.6 (2020-12-27):

therion:
 * fixed map statistics bug introduced in 5.5.5

--------------------------------------------------------------------------------

Therion 5.5.5 (2020-12-22):

therion:
 * updated Italian translation [#308]
 * fixed bug with statistic explo/topo/carto/copyright <number>
 * fixed bugs related to an undefined Area of Use, which should be used
   in Proj transformations

--------------------------------------------------------------------------------

Therion 5.5.4 (2020-12-15):

therion:
 * added layout-statistics carto|copyright-count
 * use unique pointers in thdatabase [#296]
 * added support for 270 to 360 degrees gradient readings
 * bugs fixed
   - scrap -walls off not working [#297]
   - various fixes [#293,294,295,296,298,299,301,302,303,305]

thbook:
 * support smaller page formats (configuration at the line 5 of the file
   thbook/thbook.tex)

loch:
  * bugs fixed:
    - fix display of Survex 3D with LRUD [#286]
    - read splay flag from Survex 3D files [#287]

make:
 * allow -j$N [#283]
 * allow passing of WX_CONFIG variable [#284]
 * remove local copies of getline and getopt [#290,306]
 * small fixes

infrastructure
 * use Github actions instead of Travis CI

--------------------------------------------------------------------------------

Therion 5.5.3 (2020-10-17):

therion:
 * mil/mils angle unit deprecation warning [#129]
 * sql export shot length precision increase [#147]
 * bugs fixed
   - incorect calculation of station position when fixed multiple times
     [#269,270]
   - memory leaks causing some random behaviour [#278]
   - scale value should default to 1 when omitted from "calibrate" [#263]

loch:
 * splay shots are rendered with darker colour
 * duplicate shots displayed by default
 * small bug fixes

--------------------------------------------------------------------------------
